# sealpir-rust

./: .gitmodules  Cargo.toml  README.md  build.rs
sealpir-bindings/: pir_rust.cpp  pir_rust.hpp
src/: client.rs  lib.rs  server.rs
tests/: pir.rs
